--- a/latest/CeylonHearts/app/src/main/res/layout/activity_register.xml
+++ b/latest/CeylonHearts/app/src/main/res/layout/activity_register.xml
@@ -9,7 +9,7 @@
 
     <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="fill_parent"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -95,7 +95,7 @@
                 android:textStyle="bold"
                 app:backgroundTint="@color/teal_200" />
         </LinearLayout>
-    </ScrollView>
+
 
 
 
