--- a/CeylonHearts/app/src/main/res/layout/activity_main.xml
+++ b/CeylonHearts/app/src/main/res/layout/activity_main.xml
@@ -12,12 +12,11 @@
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_marginTop="20dp"
-        android:layout_marginRight="0dp"
         android:text="Register Yourself Now"
-        android:layout_marginLeft="70dp"
         android:textColor="@color/white"
         android:textSize="25sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:gravity="center"/>
 
     <ImageView
         android:id="@+id/regsiter_icon"
@@ -76,7 +75,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="510dp"
         android:text="Already Have an account? Log in here"
-        android:layout_marginLeft="50dp"
+        android:gravity="center"
         android:textColor="@color/white"
         android:textSize="19sp"/>
 
@@ -89,7 +88,7 @@
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="15dp"
-        android:gravity="center_horizontal" />
+        android:gravity="center" />
 
 
     <LinearLayout
