--- a/CeylonHearts/app/src/main/res/layout/activity_login.xml
+++ b/CeylonHearts/app/src/main/res/layout/activity_login.xml
@@ -10,9 +10,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
         android:layout_marginTop="50dp"
-        android:layout_marginRight="100dp"
+        android:gravity="center"
         android:text="Login to Account"
         android:textColor="@color/white"
         android:textSize="25dp"
@@ -71,11 +70,10 @@
         android:id="@+id/sign_up_txt_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
         android:layout_marginTop="600dp"
-        android:layout_marginRight="50dp"
         android:text="Don't have an Account? Sign up here"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
+        android:gravity="center"
         android:textSize="18dp" />
 
 
