--- a/CeylonHearts/app/src/main/res/values/colors.xml
+++ b/CeylonHearts/app/src/main/res/values/colors.xml
@@ -7,5 +7,5 @@
     <color name="teal_700">#009688</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="orange">#FFFF5722</color>
+    <color name="orange">#FF825B</color>
 </resources>
