--- a/CeylonHearts/app/src/main/res/layout/activity_setup.xml
+++ b/CeylonHearts/app/src/main/res/layout/activity_setup.xml
@@ -4,21 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="@color/teal_200"
     tools:context=".SetupActivity">
 
-   <TextView
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:layout_marginTop="50dp"
-       android:padding="20dp"
-       android:text="My Account Details"
-       android:textColor="@color/white"
-       android:layout_marginLeft="50dp"
-       android:layout_marginRight="4dp"
-       android:textSize="30sp">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_marginRight="4dp"
+        android:gravity="center"
+        android:padding="20dp"
+        android:text="My Account Details"
+        android:textColor="@color/black"
+        android:textSize="40dp">
 
-   </TextView>
+    </TextView>
 
     <EditText
         android:id="@+id/setup_username"
@@ -57,6 +57,7 @@
         android:hint="Create Account"
         android:padding="15dp"
         android:textColorHint="@color/black"
-        app:backgroundTint="@color/white" />
+        app:backgroundTint="@color/white"
+        android:textSize="20dp"/>
 
 </RelativeLayout>
